# RNasDEV

./: CONTRIBUTING.md  Development.md  LICENSE  Makefile  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: feature_request.md
.github/workflows/: dogfood.yml
agenthub/SWE_agent/: prompts.py
docs/architecture/: README.md
docs/documentation/: LOCAL_LLM_GUIDE.md
evaluation/SWE-bench/scripts/: prepare_devin_outputs_for_evaluation.py
